@@ -27,6 +27,11 @@ import struct
 import tempfile
 
 try:
+    import stackless
+except ImportError:
+    stackless = None
+
+try:
     import _thread, threading
 except ImportError:
     _thread = None
