@@ -1,7 +1,7 @@
 import unittest
 import builtins
 import warnings
-from test.support import run_unittest
+from test.support import run_unittest, stackless
 import os
 from platform import system as platform_system
 
@@ -33,11 +33,6 @@ class ExceptionClassTests(unittest.TestCase):
         inheritance_tree = open(os.path.join(os.path.split(__file__)[0],
                                                 'exception_hierarchy.txt'))
         try:
-            import stackless
-            haveStackless = True
-        except:
-            haveStackless = False
-        try:
             superclass_name = inheritance_tree.readline().rstrip()
             try:
                 last_exc = getattr(builtins, superclass_name)
@@ -62,7 +57,7 @@ class ExceptionClassTests(unittest.TestCase):
                 if '[' in exc_name:
                     left_bracket = exc_name.index('[')
                     exc_name = exc_name[:left_bracket-1]  # cover space
-                if not haveStackless and exc_name == "TaskletExit":
+                if stackless is None and exc_name == "TaskletExit":
                     exc_set.discard(exc_name)
                     continue
                 try:
